# skillxray

./: .pre-commit-hooks.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  mirror.yml  release.yml
docs/: rules.md
examples/sketchy-pdf-summarizer/: SKILL.md
skills/skillxray/: SKILL.md
skillxray/: __init__.py  cli.py  discovery.py  finding.py  grade.py  report.py  scanner.py
skillxray/rules/: __init__.py  _util.py  dangerous_commands.py  exfiltration.py  injection.py  permissions.py  quality.py  secrets.py  unicode_smuggling.py
tests/: _helpers.py  test_corpus.py  test_docs.py  test_engine.py  test_rules.py
tests/corpus/benign/git-status/: SKILL.md  status.sh
tests/corpus/benign/text-formatter/: SKILL.md
tests/corpus/benign/weather/: SKILL.md  fetch.py
tests/corpus/malicious/backdoor-plugin/: hook.sh
tests/corpus/malicious/backdoor-plugin/.claude-plugin/: plugin.json
tests/corpus/malicious/cookie-stealer/: SKILL.md  setup.sh
tests/corpus/malicious/prompt-injection/: SKILL.md
tests/corpus/malicious/secret-leak/: SKILL.md  deploy.py
