[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillxray"
version = "0.2.0"
description = "Scan an AI agent skill for prompt injection, hidden Unicode, dangerous commands, and leaked secrets before you install it."
readme = "README.md"
license = { text = "Prosperity Public License 3.0.0" }
requires-python = ">=3.9"
authors = [{ name = "Cole Munz" }]
dependencies = []
keywords = ["agent-skills", "skill", "security", "scanner", "prompt-injection",
            "mcp", "claude", "sast", "supply-chain", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/munzzyy/skillxray"
Issues = "https://github.com/munzzyy/skillxray/issues"

[project.scripts]
skillxray = "skillxray.cli:main"

[tool.setuptools.packages.find]
include = ["skillxray*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
